fix firefox spacing but

--- a/frontend/sass/norent/styles.scss
+++ b/frontend/sass/norent/styles.scss
@@ -280,6 +280,13 @@ $norent-sticky-menu-height: 100px;
   }
 }
 
+.jf-collective-action-list {
+  // Fixes bug on firefox where container extends all the way to maximum width on desktop
+  @include tablet {
+    width: max-content;
+  }
+}
+
 // Override styling from Justfix site to include shadow above
 .jf-letter-preview {
   box-shadow: 0px 1.5px 4px 1px rgba(0, 0, 0, 0.25);
